Fix hidden panel visibility

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,10 @@
   box-sizing: border-box;
 }
 
+[hidden] {
+  display: none !important;
+}
+
 html {
   color-scheme: light;
 }
